--- a/src/CurrencyConverter.API/CurrencyConverter.API.csproj
+++ b/src/CurrencyConverter.API/CurrencyConverter.API.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>82575f5a-80f7-45cd-b9ea-7986c06a0066</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
